In title, prevent letters like g from being clipped at the bottom
Also, remove unused
is-selected classes.

--- a/css/src/edit-block.scss
+++ b/css/src/edit-block.scss
@@ -63,7 +63,6 @@ body {
 
 /* Forked from Gutenberg */
 .editor-post-title .editor-post-title__input:focus {
-	border: 1px solid transparent;
 	outline: 1px solid transparent;
 	box-shadow: none;
 }
